--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+﻿<!DOCTYPE html> 
 <html>
 <head>
 <meta charset="utf-8">
@@ -6,7 +6,7 @@
 <!-- grupo CSS -->
 <link rel="stylesheet" href="css/jquery.mobile.icons-1.4.5.min.css"/>
 <link rel="stylesheet" href="css/jquery.mobile.structure-1.4.5.min.css"/>
-<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css"/>
+<link rel="stylesheet" href="css/tema-app1.min.css"/>
 
 <!--grupo JavaScript-->
 <script src="js/jquery-1.11.2.min.js"></script>
